// Copyright 2023 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

option optimize_for = LITE_RUNTIME;
option java_package = "org.chromium.components.optimization_guide.features.proto";

option java_outer_classname = "CommonFeatureDataProto";

package optimization_guide.proto;

// Contains common quality data that goes in FeatureQuality message for various
// features.

// Type of Feedback provided by the user.
enum UserFeedback {
  USER_FEEDBACK_UNSPECIFIED = 0;
  USER_FEEDBACK_THUMBS_DOWN = 1;
  USER_FEEDBACK_THUMBS_UP = 2;
}

message FloatArray {
  repeated float values = 1;
}

message Embedding {
  // The embedding vector. Note that future versions of this proto might not
  // have this field set, as a new field may be added for quantized embeddings.
  FloatArray floats = 1;
}
